--- a/driver-service/src/main/resources/application.yaml
+++ b/driver-service/src/main/resources/application.yaml
@@ -1,6 +1,11 @@
 spring:
   application:
     name: driver-service
+  kafka:
+    bootstrap-servers: "http://localhost:29092"
+    consumer:
+      group-id: fleet.tripstarted.to.driver
+      auto-offset-reset: earliest
 
   datasource:
     url: jdbc:postgresql://localhost:5555/fleetDrivers
@@ -16,5 +21,11 @@ spring:
     properties:
       hibernate:
         format_sql: true
+fleet-management:
+  config:
+    kafka:
+      topics:
+        trip-started: "fleet.trip.started"
+        trip-ended: "fleet.trip.ended"
 server:
   port: 8081
