--- a/vehicle-service/src/main/resources/application.yaml
+++ b/vehicle-service/src/main/resources/application.yaml
@@ -1,7 +1,11 @@
 spring:
   application:
     name: vehicle-service
-
+  kafka:
+    bootstrap-servers: "http://localhost:29092"
+    consumer:
+      group-id: fleet.tripstarted.to.vehicle
+      auto-offset-reset: earliest
   datasource:
     url: jdbc:postgresql://localhost:5555/fleetVehicles
     username: postgres
@@ -16,5 +20,12 @@ spring:
     properties:
       hibernate:
         format_sql: true
+fleet-management:
+  config:
+    kafka:
+      server-url: "http://localhost:29092"
+      topics:
+        trip-started: "fleet.trip.started"
+        trip-ended: "fleet.trip.ended"
 server:
   port: 8082
