--- a/trip-service/src/main/resources/application.yaml
+++ b/trip-service/src/main/resources/application.yaml
@@ -22,6 +22,7 @@ fleet-management:
       topics:
         trip-started: "fleet.trip.started"
         trip-ended: "fleet.trip.ended"
+        trip-canceled: "fleet.trip.canceled"
 
   trip-service:
     clients:
